--- a/src/components/Invitation/invitation.scss
+++ b/src/components/Invitation/invitation.scss
@@ -15,7 +15,7 @@ $copyColor: $slate;
 $button_color:  $magenta;
 
 $offset: 127px;
-$desktopOffset: 135px;
+$desktopOffset: 0;
 $menuTransitionTime: .15s;
 
 $hover: $orange;
@@ -78,6 +78,10 @@ h4 {
 
 a {
 	color: $copyColor;
+}
+
+.nobreak {
+	white-space: nowrap;
 }
 
 .invitationPage {
@@ -197,7 +201,6 @@ a {
 	background-size: 320%;
   background-position: -241% 0px;
   padding-bottom: 36%;
-	max-width: 1450px;
 	margin: auto;
 
 	&__Content {
@@ -274,6 +277,14 @@ a {
 			margin-right: 15px;
 		}
 	}
+
+	@include breakpoint(med) {
+		height: 884px;
+		padding-bottom: 0;
+		background-size: 3550px;
+    background-repeat: no-repeat;
+    background-position: top center;
+	}
 }
 
 .overflowImage {
@@ -281,6 +292,7 @@ a {
 		position: relative;
 		z-index: 10000;
 		overflow: visible;
+		max-height: 370px;
 
 		img {
 			position: absolute;
@@ -308,6 +320,7 @@ a {
 
 		&__Copy {
 			padding-right: 40px;
+			transform: translateY(-35px);
 		}
 
 		p {
@@ -324,6 +337,7 @@ a {
 
 .DetailsContainer {
 	display: flex;
+	flex-direction: column;
 
 	&__Copy {
 		flex: 1;
@@ -333,6 +347,10 @@ a {
 		@include breakpoint(med) {
 			margin-right: 40px;
 		}
+	}
+
+	@include breakpoint(med) {
+		flex-direction: row;
 	}
 }
 
@@ -459,30 +477,20 @@ a {
 	}
 
 	.Exit {
-		text-indent: -999px;
     border: none;
     position: absolute;
     top: 20px;
     right: 20px;
-		background: transparent;
 		cursor: pointer;
 		height: 37px;
+		width: 37px;
 		outline: none;
 		display: block;
-
-		&:after, &:before {
-			content: "";
-			width: 35px;
-			height: 3px;
-			background-color: #fff;
-			display: block;
-			transform: rotate(45deg);
-		}
-		&:before {
-			transform: rotate(-45deg);
-			position: relative;
-			top: 1px;
-		}
+		background-image: url(close-icon.png);
+		background-size: 26px;
+		background-color: transparent;
+		background-repeat: no-repeat;
+		background-position: top right;
 	}
 }
 
@@ -512,7 +520,7 @@ a {
 		}
 
 		@include breakpoint(med) {
-			flex-direction: row-reverse;
+			flex-direction: row;
 
 			p, .ImageContainer {
 				flex: 1;
@@ -560,17 +568,25 @@ a {
 		content: '';
     display: block;
     position: absolute;
-    width: calc(100% + 40px);
-    background-color: inherit;
-    bottom: -63px;
-    height: 150px;
-    left: -20px;
+    top: 134px;
+    left: 0px;
+    width: 100%;
+    height: 157px;
+    background-color: #9c998d;
 	}
 
+	p {
+		max-width: 600px;
+	}
+
+
 	@include breakpoint(med) {
+		p {
+			max-width: 70%;
+		}
+
 		&:after {
-			bottom: -145px;
-			height: 150px;
+			content: none;
 		}
 	}
 }
@@ -593,7 +609,6 @@ form {
 
   @include breakpoint(med) {
 		max-width: 1200px;
-		margin: auto;
 
     .first_name, .last_name {
       width: 48%;
@@ -617,11 +632,6 @@ form {
 		.right {
 			display: inline-block;
 			width: 50%;
-		}
-
-		.submit_container {
-			max-width: 300px;
-			margin: 30px 0px;
 		}
   }
 
@@ -672,41 +682,16 @@ form {
 		color: $copyColor;
 		font-family: 'Raleway', sans-serif;
 		font-size: 16px;
+
+		@include breakpoint(med) {
+				width: 80%;
+		}
 	}
 
 	textarea.active {
 	  margin-bottom: 0;
 	}
 
-	input[type="submit"] {
-	    font-size: 15px;
-	    background-color: $button_color;
-	    color: #fff;
-	    display: inline-block;
-	    width: 100%;
-	    padding: 12px 36px;
-	    text-align: center;
-	    text-decoration: none;
-	    cursor: pointer;
-	    letter-spacing: 2px;
-	    text-transform: uppercase;
-	    @include transition(background-color 0.15s ease);
-	    border: none;
-	    position: relative;
-	    z-index: 2;
-			margin-top: 25px;
-
-	    &:hover {
-	      background-color: $hover;
-	    }
-
-	    @include breakpoint (med) {
-				font-size: 16px;
-	      display: inline-block;
-	      width: 100%;
-				margin-top: 0;
-	    }
-	}
 
 	label {
 		color: $copyColor;
@@ -716,16 +701,15 @@ form {
     width: auto;
     height: auto;
     padding: 10px;
-
-		&:checked {
-			border-color: blue;
-		}
+		background-size: 80%;
+		background-repeat: no-repeat;
+		background-position: center;
 	}
-	.radio--yes {
-		border: 1px solid green;
+	.radio--yes:checked  {
+		background-image: url(checkmark-green.png);
 	}
-	.radio--no {
-		border: 1px solid red;
+	.radio--no:checked  {
+		background-image: url(checkmark-red.png);
 	}
 
 	.radioLabel {
@@ -734,10 +718,13 @@ form {
 	}
 
 	.checkbox {
-		width: 25px;
+		width: 22px;
+		background-size: 80%;
+		background-repeat: no-repeat;
+		background-position: center;
 
 		&:checked {
-			border-color: blue;
+			background-image: url(checkmark-green.png);
 		}
 	}
 
@@ -769,6 +756,40 @@ form {
 	display: none;
 }
 
+.submit_container {
+	max-width: 300px;
+	margin: 30px 0px;
+}
+
+input[type="submit"] {
+		font-size: 15px;
+		background-color: $button_color;
+		color: #fff;
+		display: inline-block;
+		width: 100%;
+		padding: 12px 36px;
+		text-align: center;
+		text-decoration: none;
+		cursor: pointer;
+		letter-spacing: 2px;
+		text-transform: uppercase;
+		@include transition(background-color 0.15s ease);
+		border: none;
+		position: relative;
+		z-index: 2;
+		margin-top: 25px;
+
+		&:hover {
+			background-color: $hover;
+		}
+
+		@include breakpoint (med) {
+			font-size: 16px;
+			display: inline-block;
+			width: 100%;
+			margin-top: 0;
+		}
+}
 
 
 
@@ -826,4 +847,12 @@ p.success_message {
 	position: relative;
 	z-index: 2;
 	font-weight: 700;
+}
+
+.react-add-to-calendar {
+    margin-top: 20px;
+}
+
+.react-add-to-calendar__dropdown li {
+    margin: 10px 0;
 }
