--- a/src/components/Invitation/invitation.css
+++ b/src/components/Invitation/invitation.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Alfa+Slab+One");
 * {
   margin: 0;
@@ -66,16 +67,18 @@ a {
 .nobreak {
   white-space: nowrap; }
 
-.invitationPage {
-  background-color: #f7f7f7;
+.contentContainer {
   transition: transform 0.15s ease-in-out; }
   @media (min-width: 1024px) {
-    .invitationPage {
+    .contentContainer {
       transform: translateX(0px) !important;
       transition: none !important; } }
 
+.invitationPage {
+  background-color: #f7f7f7; }
+
 .SectionInner {
-  max-width: 1450px;
+  max-width: 1200px;
   margin: auto; }
 
 .MobileMenu {
@@ -119,11 +122,9 @@ a {
 .MobileMenu__items {
   position: absolute;
   top: 26px;
-  right: -104px;
+  right: 50px;
   width: auto;
-  z-index: 1000;
-  opacity: 0;
-  visibility: hidden;
+  z-index: 0;
   transition: opacity 0.15s ease-in-out; }
   .MobileMenu__items a {
     display: block;
@@ -135,9 +136,6 @@ a {
 .MobileMenu__open {
   position: relative;
   transform: translateX(-178px); }
-  .MobileMenu__open .MobileMenu__items {
-    opacity: 1;
-    visibility: visible; }
 
 .Menu__items {
   width: 80%;
@@ -218,7 +216,7 @@ a {
         margin-right: 15px; } }
   @media (min-width: 1024px) {
     .Invitation__LockUp {
-      height: 884px;
+      height: 825px;
       padding-bottom: 0;
       background-size: 3550px;
       background-repeat: no-repeat;
@@ -254,7 +252,7 @@ a {
 
 @media (min-width: 1440px) {
   .AboutUs p {
-    max-width: 65%; } }
+    max-width: 60%; } }
 
 .DetailsContainer {
   display: flex;
@@ -313,6 +311,10 @@ a {
   background-color: #f5f2eb; }
   .SectionDark--darker {
     background-color: #edeae4; }
+  .SectionDark--darkest {
+    background-color: #9c998d; }
+    .SectionDark--darkest h3, .SectionDark--darkest p {
+      color: #fff; }
 
 .Block {
   display: inline-block;
@@ -389,6 +391,9 @@ a {
   display: block; }
   .Registry .Button:hover {
     background-color: #00aeb5; }
+  @media (min-width: 1024px) {
+    .Registry .Button {
+      max-width: 300px; } }
 
 .Registry__Content {
   flex-direction: column-reverse;
@@ -454,6 +459,8 @@ form {
       justify-content: flex-start; }
   form .RadioGroup {
     display: flex; }
+  form .left {
+    width: 100%; }
   @media (min-width: 1024px) {
     form {
       max-width: 1200px; }
@@ -531,8 +538,10 @@ form {
   display: none; }
 
 .submit_container {
-  max-width: 300px;
   margin: 30px 0px; }
+  @media (min-width: 1024px) {
+    .submit_container {
+      max-width: 300px; } }
 
 input[type="submit"] {
   font-size: 15px;
@@ -551,7 +560,7 @@ input[type="submit"] {
   border: none;
   position: relative;
   z-index: 2;
-  margin-top: 25px; }
+  margin: 25px 0 0 0; }
   input[type="submit"]:hover {
     background-color: #f45a48; }
   @media (min-width: 1024px) {
@@ -559,7 +568,7 @@ input[type="submit"] {
       font-size: 16px;
       display: inline-block;
       width: 100%;
-      margin-top: 0; } }
+      margin: 0; } }
 
 .required-message, .error-message {
   color: #c43b1d;
@@ -624,3 +633,208 @@ p.success_message {
 
 .react-add-to-calendar__dropdown li {
   margin: 10px 0; }
+
+/* Slider */
+.slick-slider {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent; }
+
+.slick-list {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  margin: 0;
+  padding: 0; }
+  .slick-list:focus {
+    outline: none; }
+  .slick-list.dragging {
+    cursor: pointer;
+    cursor: hand; }
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0); }
+
+.slick-track {
+  position: relative;
+  left: 0;
+  top: 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
+  .slick-track:before, .slick-track:after {
+    content: "";
+    display: table; }
+  .slick-track:after {
+    clear: both; }
+  .slick-loading .slick-track {
+    visibility: hidden; }
+
+.slick-slide {
+  float: left;
+  height: 100%;
+  min-height: 1px;
+  display: none; }
+  [dir="rtl"] .slick-slide {
+    float: right; }
+  .slick-slide img {
+    display: block; }
+  .slick-slide.slick-loading img {
+    display: none; }
+  .slick-slide.dragging img {
+    pointer-events: none; }
+  .slick-initialized .slick-slide {
+    display: block; }
+  .slick-loading .slick-slide {
+    visibility: hidden; }
+  .slick-vertical .slick-slide {
+    display: block;
+    height: auto;
+    border: 1px solid transparent; }
+
+.slick-arrow.slick-hidden {
+  display: none; }
+
+/* Slider */
+.slick-loading .slick-list {
+  background: #fff url("./ajax-loader.gif") center center no-repeat; }
+
+/* Icons */
+@font-face {
+  font-family: "slick";
+  src: "fonts/slick.eot";
+  src: "fonts/slick.eot?#iefix" format("embedded-opentype"), "fonts/slick.woff" format("woff"), "fonts/slick.ttf" format("truetype"), "fonts/slick.svg#slick" format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+/* Arrows */
+.slick-prev,
+.slick-next {
+  position: absolute;
+  display: block;
+  height: 20px;
+  width: 20px;
+  line-height: 0px;
+  font-size: 0px;
+  cursor: pointer;
+  background: transparent;
+  color: transparent;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  padding: 0;
+  border: none;
+  outline: none; }
+  .slick-prev:hover, .slick-prev:focus,
+  .slick-next:hover,
+  .slick-next:focus {
+    outline: none;
+    background: transparent;
+    color: transparent; }
+    .slick-prev:hover:before, .slick-prev:focus:before,
+    .slick-next:hover:before,
+    .slick-next:focus:before {
+      opacity: 1; }
+  .slick-prev.slick-disabled:before,
+  .slick-next.slick-disabled:before {
+    opacity: 0.25; }
+  .slick-prev:before,
+  .slick-next:before {
+    font-family: "slick";
+    font-size: 20px;
+    line-height: 1;
+    color: white;
+    opacity: 0.75;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale; }
+
+.slick-prev {
+  left: -25px; }
+  [dir="rtl"] .slick-prev {
+    left: auto;
+    right: -25px; }
+  .slick-prev:before {
+    content: "←"; }
+    [dir="rtl"] .slick-prev:before {
+      content: "→"; }
+
+.slick-next {
+  right: -25px; }
+  [dir="rtl"] .slick-next {
+    left: -25px;
+    right: auto; }
+  .slick-next:before {
+    content: "→"; }
+    [dir="rtl"] .slick-next:before {
+      content: "←"; }
+
+/* Dots */
+.slick-dotted.slick-slider {
+  margin-bottom: 30px; }
+
+.slick-dots {
+  position: absolute;
+  bottom: -25px;
+  list-style: none;
+  display: block;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  width: 100%; }
+  .slick-dots li {
+    position: relative;
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    margin: 0 5px;
+    padding: 0;
+    cursor: pointer; }
+    .slick-dots li button {
+      border: 0;
+      background: transparent;
+      display: block;
+      height: 20px;
+      width: 20px;
+      outline: none;
+      line-height: 0px;
+      font-size: 0px;
+      color: transparent;
+      padding: 5px;
+      cursor: pointer; }
+      .slick-dots li button:hover, .slick-dots li button:focus {
+        outline: none; }
+        .slick-dots li button:hover:before, .slick-dots li button:focus:before {
+          opacity: 1; }
+      .slick-dots li button:before {
+        position: absolute;
+        top: 0;
+        left: 0;
+        content: "•";
+        width: 20px;
+        height: 20px;
+        font-family: "slick";
+        font-size: 6px;
+        line-height: 20px;
+        text-align: center;
+        color: black;
+        opacity: 0.25;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale; }
+    .slick-dots li.slick-active button:before {
+      color: black;
+      opacity: 0.75; }
